WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
301896
The default value for auto dimming on VisionOS is false instead of True
https://bugs.webkit.org/show_bug.cgi?id=301896
Summary
The default value for auto dimming on VisionOS is false instead of True
phinehas133
Reported
2025-11-03 18:21:44 PST
see title
Attachments
Add attachment
proposed patch, testcase, etc.
phinehas133
Comment 1
2025-11-03 18:21:46 PST
<
rdar://problem/163824973
>
phinehas133
Comment 2
2025-11-03 18:25:23 PST
Pull request:
https://github.com/WebKit/WebKit/pull/53366
EWS
Comment 3
2025-11-04 10:25:26 PST
Committed
302551@main
(9d8d97901b01): <
https://commits.webkit.org/302551@main
> Reviewed commits have been landed. Closing PR #53366 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug