Cherry-pick 9d8d97901b01. rdar://164023834

Auto dimming on VisionOS is off by default
    https://bugs.webkit.org/show_bug.cgi?id=301896
    rdar://163824973

    Reviewed by Jean-Yves Avenard.

    Set the standardUserDefaults for auto dimming to YES instead of NO.

    * Source/WebCore/platform/cocoa/PlaybackSessionModel.h:
    (WebCore::PlaybackSessionModel::prefersAutoDimming const):
    * Source/WebKit/UIProcess/Cocoa/PlaybackSessionManagerProxy.h:
    * Source/WebKit/UIProcess/Cocoa/PlaybackSessionManagerProxy.mm:
    (WebKit::PlaybackSessionManagerProxy::PlaybackSessionManagerProxy):
    * Source/WebKit/UIProcess/ios/fullscreen/WKFullScreenWindowControllerIOS.mm:
    (-[WKFullScreenWindowController didExitVideoFullscreen]):
    (-[WKFullScreenWindowController prefersSceneDimming]):

    Canonical link: https://commits.webkit.org/302551@main

Canonical link: https://commits.webkit.org/301765.272@safari-7623.1.14.14-branch